--- a/task/Navneet-Zeksta/package.json
+++ b/task/Navneet-Zeksta/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.74.3",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "styled-components": "^6.1.12"
   },
